[project]
name = "github"
version = "0.1.0"
description = "Learning the github"
authors = [
    {name = "roBoot",email = "maksim.nemkov.ldt@gmail.com"}
]
license = {text = "GNU"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
